Refactor code using partial and make app production ready

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-Hello Wumnz Welcome back!
+<h1> Hello Wumnz Welcome back! </h1>
+
+<%= link_to 'Thoughts Listings', thoughts_path %> |
+<%= link_to 'About Page', about_path %>
