--- a/app/views/thoughts/index.html.erb
+++ b/app/views/thoughts/index.html.erb
@@ -5,7 +5,7 @@
 		<tr>
 			<th>Title</th>
 			<th>Description</th>
-			<th>Actions</th>
+			<th colspan="3">Actions</th>
 			<th>Likes</th>
 		</tr>
 	</thead>
@@ -15,8 +15,14 @@
 			<tr>
 				<td><%= thought.title %></td>
 				<td><%= thought.description %></td>
-				<td>placeholder</td>
+				<td><%= link_to 'Show', thought_path(thought) %></td>
+				<td><%= link_to 'Edit', edit_thought_path(thought) %></td>
+				<td><%= link_to 'Delete', thought_path(thought), method: :delete, data: {confirm: "Are you sure you want to delete?"} %></td>
 			</tr>
 		<% end %>
 	</tbody>
 </table>
+
+<p>
+	<%= link_to 'Create new thought', new_thought_path %>
+</p>
