--- a/app/views/thoughts/index.html.erb
+++ b/app/views/thoughts/index.html.erb
@@ -7,6 +7,7 @@
 			<th>Description</th>
 			<th colspan="3">Actions</th>
 			<th>Likes</th>
+			<th>@</th>
 		</tr>
 	</thead>
 	
@@ -18,7 +19,9 @@
 				<td><%= link_to 'Show', thought_path(thought) %></td>
 				<td><%= link_to 'Edit', edit_thought_path(thought) %></td>
 				<td><%= link_to 'Delete', thought_path(thought), method: :delete, data: {confirm: "Are you sure you want to delete?"} %></td>
-			</tr>
+				<td style="text-align: center;"> # </td>
+				<td><%= thought.user.username %></td>
+			</tr>				
 		<% end %>
 	</tbody>
 </table>
