--- a/app/views/thoughts/show.html.erb
+++ b/app/views/thoughts/show.html.erb
@@ -2,6 +2,7 @@
 
 <p><strong>Title: </strong><%= @thought.title %></p>
 <p><strong>Description: </strong><%= @thought.description %></p>
+<p><strong>Handle: @</strong><%= @thought.user.username %></p>
 
 <%= link_to 'Edit', edit_thought_path(@thought) %> |
 <%= link_to 'Delete', thought_path(@thought), method: :delete, data: {confirm: "Are you sure you want to delete?"} %> |
